[translation] added translation for shared folder blacklist

--- a/assets/jsons/translations/de.json
+++ b/assets/jsons/translations/de.json
@@ -601,6 +601,10 @@
                     "ENOSPC": "Die Festplatte ist voll, machen Sie Platz und versuchen Sie es erneut.",
                     "UNKNOWN_ERROR": "Ein unbekannter Fehler ist beim Verknüpfen des Ordners aufgetreten."
                 }
+            },
+            "adding-error": {
+                "title": "Das Hinzufügen des freigegebenen Ordners ist fehlgeschlagen",
+                "msg": "Sie können \"{folder}\" nicht zu freigegebenen Ordnern hinzufügen."
             }
         },
         "create-launch-shortcut": {
@@ -804,6 +808,10 @@
                 "unlink-folder": "Ordner-Verknüpfung aufheben",
                 "link-all": "Alle verlinken"
             }
+        },
+        "adding-shared-folder": {
+            "title": "Freigegebenen Ordner hinzufügen",
+            "description": "Beim Verknüpfen des Ordners \"{folder}\" können Probleme auftreten. Möchten Sie ihn wirklich hinzufügen?"
         },
         "create-launch-shortcut": {
             "title": "Verknüpfung erstellen",
