--- a/assets/jsons/translations/ja.json
+++ b/assets/jsons/translations/ja.json
@@ -601,6 +601,10 @@
                     "ENOSPC": "ディスクがいっぱいです。空き容量を作ってもう一度試してください。",
                     "UNKNOWN_ERROR": "フォルダをリンク中に不明なエラーが発生しました。"
                 }
+            },
+            "adding-error": {
+                "title": "共有フォルダの追加に失敗しました",
+                "msg": "「{folder}」を共有フォルダに追加することはできません。"
             }
         },
         "create-launch-shortcut": {
@@ -804,6 +808,10 @@
                 "unlink-folder": "フォルダーのリンクを解除",
                 "link-all": "すべてリンク"
             }
+        },
+        "adding-shared-folder": {
+            "title": "共有フォルダの追加",
+            "description": "「{folder}」フォルダをリンクするときに問題が発生する可能性があります。追加してもよろしいですか?"
         },
         "create-launch-shortcut": {
             "title": "ショートカットを作成",
