--- a/assets/jsons/translations/ru.json
+++ b/assets/jsons/translations/ru.json
@@ -601,6 +601,10 @@
                     "ENOSPC": "Диск заполнен, освободите место и попробуйте снова.",
                     "UNKNOWN_ERROR": "Произошла неизвестная ошибка при связывании папки."
                 }
+            },
+            "adding-error": {
+                "title": "Не удалось добавить общую папку.",
+                "msg": "Вы не можете добавлять \"{folder}\" в общие папки."
             }
         },
         "create-launch-shortcut": {
@@ -804,6 +808,10 @@
                 "unlink-folder": "Отвязать папку",
                 "link-all": "Связать всё"
             }
+        },
+        "adding-shared-folder": {
+            "title": "Добавление общей папки",
+            "description": "У вас могут возникнуть проблемы при связывании папки \"{folder}\". Вы уверены, что хотите ее добавить?"
         },
         "create-launch-shortcut": {
             "title": "Создать ярлык",
