--- a/assets/jsons/translations/zh-tw.json
+++ b/assets/jsons/translations/zh-tw.json
@@ -601,6 +601,10 @@
                     "ENOSPC": "磁碟已滿，請騰出空間後再試。",
                     "UNKNOWN_ERROR": "連結文件夾時發生未知錯誤。"
                 }
+            },
+            "adding-error": {
+                "title": "添加共享文件夹失败",
+                "msg": "您无法将\"{folder}\"添加到共享文件夹。"
             }
         },
         "create-launch-shortcut": {
@@ -804,6 +808,10 @@
                 "unlink-folder": "取消關聯文件夾",
                 "link-all": "關聯所有"
             }
+        },
+        "adding-shared-folder": {
+            "title": "添加共享文件夹",
+            "description": "链接\"{folder}\"文件夹时可能会遇到问题。您确定要添加它吗？"
         },
         "create-launch-shortcut": {
             "title": "創建捷徑",
