--- a/assets/jsons/translations/zh.json
+++ b/assets/jsons/translations/zh.json
@@ -601,6 +601,10 @@
                     "ENOSPC": "磁盘已满，请腾出空间后再试。",
                     "UNKNOWN_ERROR": "链接文件夹时发生未知错误。"
                 }
+            },
+            "adding-error": {
+                "title": "添加共享文件夹失败",
+                "msg": "您无法将\"{folder}\"添加到共享文件夹。"
             }
         },
         "create-launch-shortcut": {
@@ -804,6 +808,10 @@
                 "unlink-folder": "取消关联文件夹",
                 "link-all": "关联所有"
             }
+        },
+        "adding-shared-folder": {
+            "title": "添加共享文件夹",
+            "description": "链接\"{folder}\"文件夹时可能会遇到问题。您确定要添加它吗？"
         },
         "create-launch-shortcut": {
             "title": "创建快捷方式",
